[package]
name = "iex"
version = "0.1.0"
authors = ["Attila Kun"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3.3.2", features = ["openssl"] }
actix-rt = "1.1.1"
dto = { path = "../dto" }
lazy_static = "1.4.0"
serde_json = "1.0.61"
url = "2.2.0"